--- a/index.html
+++ b/index.html
@@ -2,75 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AutoZone - Car Deals</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RideXpress</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <header>
-    <h1>AutoZone - Find Your Dream Car</h1>
-  </header>
-
-  <main class="container">
-    <div class="car-card">
-      <img src="https://cdn.motor1.com/images/mgl/qpGBL/s1/tesla-model-3-gray-2.jpg" alt="Car">
-      <div class="car-info">
-        <h2>Tesla Model 3</h2>
-        <p>2023 | Electric | Auto Drive</p>
-        <p class="price">$38,000</p>
-      </div>
-    </div>
-
-    <div class="car-card">
-      <img src="https://th.bing.com/th/id/R.2bc393d91d4b73319ced6c0c93a6fdf8?rik=XBA5a6HPOzjnEg&pid=ImgRaw&r=0" alt="Car">
-      <div class="car-info">
-        <h2>BMW M4</h2>
-        <p>2022 | Petrol | Manual</p>
-        <p class="price">$65,000</p>
-      </div>
-    </div>
-
-    <div class="car-card">
-      <img src="https://th.bing.com/th/id/R.c1ee0d4d3bbabc0f811d695cc5ebbac4?rik=HmXx4GqyOHgSxQ&pid=ImgRaw&r=0" alt="Car">
-      <div class="car-info">
-        <h2>Audi A6</h2>
-        <p>2021 | Diesel | Automatic</p>
-        <p class="price">$47,000</p>
-      </div>
-    </div>
-
-    <div class="car-card">
-      <img src="https://cdn.motor1.com/images/mgl/Akm70O/s1/2024-ford-mustang-dark-horse-first-drive-review.jpg" alt="Car">
-      <div class="car-info">
-        <h2>Ford Mustang</h2>
-        <p>2020 | Petrol | Manual</p>
-        <p class="price">$56,000</p>
-      </div>
-    </div>
-
-    <div class="car-card">
-      <img src="https://cdn.motor1.com/images/mgl/Akm70O/s1/2024-ford-mustang-dark-horse-first-drive-review.jpg" alt="Car">
-      <div class="car-info">
-        <h2>Ford Mustang</h2>
-        <p>2020 | Petrol | Manual</p>
-        <p class="price">$56,000</p>
-      </div>
-    </div>
-
-    <div class="car-card">
-      <img src="https://cdn.motor1.com/images/mgl/Akm70O/s1/2024-ford-mustang-dark-horse-first-drive-review.jpg" alt="Car">
-      <div class="car-info">
-        <h2>Ford Mustang</h2>
-        <p>2020 | Petrol | Manual</p>
-        <p class="price">$56,000</p>
-      </div>
-    </div>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 AutoZone. All rights reserved.</p>
-  </footer>
-
+  
 </body>
 </html>
