--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    
+    <div class="nav-buttons">
+      <ul>
+      <li><a href="login">Sign In</a></li>
+      </ul>
+    </div>
   </header>
 
   
