--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
   <link rel="stylesheet" href="Styles/styles.css" />
 </head>
 <body>
-  <header>
-    <div class="header-mob">
-    <div class="logo">
-      <img src="Images/logo_blue.png" alt="RideXpress Logo" />
 
-    </div>
-     <button class="hamburger" id="hamburger-btn" aria-label="Open menu">
+  <!-- Header Section -->
+  <div class="nav-bar">
+    <div class="header-mob">
+      <div class="logo">
+        <img src="Images/logo_blue.png" alt="RideXpress Logo" />
+      </div>
+      <button class="hamburger" id="hamburger-btn" aria-label="Open menu">
         <i class="fas fa-bars"></i>
       </button>
 
-      </div>
+    </div>
 
     <nav>
       <ul>
@@ -34,9 +35,9 @@
       </ul>
     </div>
     </nav>
-
+  </div>
      
-  </header>
+  </body>
 
   
 
