--- a/index.html
+++ b/index.html
@@ -7,9 +7,34 @@
     <!--Link to css-->
     <link rel="stylesheet" href="Styles/styles.css" />
     <!--link to boxicons -->
-    
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" />
 </head>
 <body>
+    <!-- nav-bar Section -->
+     <header>
+        <!--Nav Conatainer-->
+        <div class = "nav-conatiner">
+            <!--Menu Icon-->
+            <i class="bx bx menu" id="menu-icon"> </i>
+            <!--Logo-->
+            <a href="Images/logo_blue.png" class="logo"> </a>
+            <!--Nav List-->
+            <ul class="navbar">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#cars">Cars</a></li>
+                <li><a href="#blog">Our Blog</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+            </ul>
+            <!--Search bar-->
+            <i class="bx bx-search" id="search-icon"></i>
+            <!--Search box-->
+            <div class="search-box">
+                <input type="text" placeholder="Search Here..." />
+                <i class="bx bx-search"></i>
+            </div>
+        </div>
+     </header>
     
 </body>
 </html>
