--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>RideXpress | Fast Deals. Smooth Rides</title>
     <!--Link to css-->
     <link rel="stylesheet" href="Styles/styles.css" />
-    <!--link to boxicons -->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" />
+    <!--link to font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- nav-bar Section -->
