--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--Nav Conatainer-->
         <div class = "nav-conatiner">
             <!--Menu Icon-->
-            <i class="bx bx menu" id="menu-icon"> </i>
+            <i class="fa-solid fa-bars"></i>
             <!--Logo-->
             <a href="Images/logo_blue.png" class="logo"> </a>
             <!--Nav List-->
@@ -27,11 +27,11 @@
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
             <!--Search bar-->
-            <i class="bx bx-search" id="search-icon"></i>
+            <i class="fa-solid fa-magnifying-glass"></i>
             <!--Search box-->
             <div class="search-box">
                 <input type="text" placeholder="Search Here..." />
-                <i class="bx bx-search"></i>
+                <i class="fa-solid fa-magnifying-glass"></i>
             </div>
         </div>
      </header>
