--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
 
      <!-- link to Js-->
     <script src="Scripts/main.js"></script>
+    <h1>mmmmmmmmm</h1>
+    <h2>nuwanshi</h2>
 </body>
 </html>
