--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 
      <!-- link to Js-->
     <script src="Scripts/main.js"></script>
-    <h1>mmmmmmmmm</h1>
-    <h2>nuwanshi</h2>
+    <h1>Indeewari</h1 >
 </body>
 </html>
